--- a/Exercise/index.html
+++ b/Exercise/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Document</title>
   <link rel="stylesheet" href="https://unpkg.com/bootstrap/dist/css/bootstrap.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
